// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`specified "browsers" are set as "env.targets" 1`] = `
{
  "env": {
    "targets": [
      "last 2 versions",
      "> 0.2%",
      "Firefox ESR",
      "not dead",
    ],
  },
  "jsc": {
    "externalHelpers": true,
    "minify": {
      "compress": true,
      "mangle": true,
    },
    "parser": {
      "syntax": "typescript",
      "tsx": true,
    },
    "target": "es2022",
    "transform": {
      "react": {
        "runtime": "automatic",
        "useBuiltins": true,
      },
    },
  },
  "module": {
    "ignoreDynamic": true,
    "strict": true,
    "type": "es6",
  },
}
`;

exports[`when "parser" is "ecmascript", the configuration parser is ecmascript 1`] = `
{
  "env": {
    "targets": [
      "last 2 versions",
      "> 0.2%",
      "Firefox ESR",
      "not dead",
    ],
  },
  "jsc": {
    "externalHelpers": true,
    "minify": {
      "compress": true,
      "mangle": true,
    },
    "parser": {
      "jsx": true,
      "syntax": "ecmascript",
    },
    "target": "es2022",
    "transform": {
      "react": {
        "runtime": "automatic",
        "useBuiltins": true,
      },
    },
  },
  "module": {
    "ignoreDynamic": true,
    "strict": true,
    "type": "es6",
  },
}
`;

exports[`when "parser" is "typescript", the configuration parser is typescript 1`] = `
{
  "env": {
    "targets": [
      "last 2 versions",
      "> 0.2%",
      "Firefox ESR",
      "not dead",
    ],
  },
  "jsc": {
    "externalHelpers": true,
    "minify": {
      "compress": true,
      "mangle": true,
    },
    "parser": {
      "syntax": "typescript",
      "tsx": true,
    },
    "target": "es2022",
    "transform": {
      "react": {
        "runtime": "automatic",
        "useBuiltins": true,
      },
    },
  },
  "module": {
    "ignoreDynamic": true,
    "strict": true,
    "type": "es6",
  },
}
`;

exports[`when "parser" is not set, the configuration parser is typescript 1`] = `
{
  "env": {
    "targets": [
      "last 2 versions",
      "> 0.2%",
      "Firefox ESR",
      "not dead",
    ],
  },
  "jsc": {
    "externalHelpers": true,
    "minify": {
      "compress": true,
      "mangle": true,
    },
    "parser": {
      "syntax": "typescript",
      "tsx": true,
    },
    "target": "es2022",
    "transform": {
      "react": {
        "runtime": "automatic",
        "useBuiltins": true,
      },
    },
  },
  "module": {
    "ignoreDynamic": true,
    "strict": true,
    "type": "es6",
  },
}
`;
